# mini-dpp-platform

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  .lychee.toml  .markdownlint.jsonc  .markdownlintignore  .zenodo.json  CHANGELOG.md  Caddyfile  INSPECTION_GUIDE.md  LICENSE  PLAN-platform-devops.md  PLAN.md  README.md  docker-compose.dtr.yml  docker-compose.edc.yml  docker-compose.inspection.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: __init__.py  main.py
backend/app/core/: audit.py  config.py  encryption.py  identifiers.py  keycloak_admin.py  logging.py  middleware.py  rate_limit.py  settings_service.py  tenancy.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/modules/: __init__.py  semantic_registry.py
backend/app/opcua_agent/: __init__.py  __main__.py  connection_manager.py  deadletter.py  epcis_emitter.py  flush_engine.py  health.py  ingestion_buffer.py  main.py  subscription_handler.py
backend/app/standards/: __init__.py
backend/tests/: __init__.py  conftest.py  test_opcua_agent_main.py  test_opcua_agent_sync.py  test_opcua_connection_manager.py  test_opcua_dataspace_schemas.py  test_opcua_dataspace_service.py  test_opcua_deadletter.py  test_opcua_digital_link.py  test_opcua_epcis_emitter.py  test_opcua_flush_engine.py  test_opcua_gtin.py  test_opcua_health.py  test_opcua_ingestion_buffer.py  test_opcua_resource_context.py  test_opcua_subscription_handler.py
backend/tests/conformance/: conftest.py  test_aas_conformance.py
backend/tests/e2e/: conftest.py  test_audit_flow.py  test_compliance_flow.py  test_dpp_pipeline.py  test_edc_flow.py  test_epcis_flow.py  test_template_goldens.py
backend/tests/fixtures/: inspection_dpps.json
backend/tests/inspection/: __init__.py  test_aasx_roundtrip.py  test_provenance_lifecycle.py  test_qualifier_enforcement.py  test_security_isolation.py
backend/tests/integration/: test_dpp_lifecycle.py
backend/tests/tools/: aasx_roundtrip_validator.py  audit_report.json  audit_template_rendering.py  compute_golden_hashes.py  inspection_setup.py  setup_compliance_tool_env.py  update_template_goldens.py
backend/tests/unit/: __init__.py  test_aas_bridge.py  test_aas_conformance.py  test_aas_model_utils.py  test_aas_references.py  test_aas_sanitization.py  test_aas_serialization.py  test_aasx_ingest.py  test_abac_enforcement.py  test_actor_metadata.py  (+123 more)
backend/tools/: backfill_cen_identifiers.py  check_plaintext_connector_secrets.py  run_audit_anchoring.py
(+790 files in other folders)
